# seagrass_segment

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.py  config_sam2unet.py  config_unet.py  config_vit.py  config_vit_cls.py
data/: coco_to_unet.py  dataset.py
models/: sam2unet.py  unet.py  vit.py  vit_classifier.py
scripts/: evaluate.py  infer.py  infer_sam2unet.py  infer_unet.py  infer_vit.py  infer_vit_cls.py  train.py  train_sam2unet.py  train_unet.py  train_vit.py  train_vit_cls.py
utils/: metrics.py  normalization.py  tiling.py
