[project]
name = "seagrass-segment"
version = "0.1.0"
description = "Seagrass segmentation pipeline with U-Net and ViT models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.7",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "timm>=1.0.0",
    "tqdm>=4.67.3",
]
